--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "Report",
-    "Portal",
+    "ReportPortal",
     "Cypress",
-    "reporting"
+    "reporting",
+    "epam"
   ],
-  "devDependencies": {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reportportal/agent-js-cypress"
+  },
+  "dependencies": {
     "glob": "^7.1.3",
     "mocha": "^6.0.0",
     "reportportal-client": "^5.1.0"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Vladislav Akulich",
+  "license": "Apache-2.0"
 }
