--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "glob": "7.1.3",
     "mocha": "6.0.0",
-    "reportportal-client": "git://github.com/reportportal/client-javascript.git#EPMRPP-45141"
+    "reportportal-client": "^5.5.0"
   },
   "license": "Apache-2.0",
   "devDependencies": {
