--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agent-js-cypress",
   "version": "1.1.2",
   "description": "This agent helps Cypress to communicate with Report Portal",
-  "main": "rp-reporter.js",
+  "main": "index.js",
   "scripts": {
     "eslint": "eslint \"./**/*.js\"",
     "format": "npm run eslint -- --fix",
