--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "glob": "7.1.3",
     "mocha": "7.0.1",
-    "reportportal-client": "https://github.com/reportportal/client-javascript.git#master"
+    "reportportal-client": "^5.5.0"
   },
   "license": "Apache-2.0",
   "devDependencies": {
