--- a/.eslintrc
+++ b/.eslintrc
@@ -26,5 +26,13 @@
     "no-invalid-this": 0,
     "prefer-object-spread": 0,
     "no-console": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["example/integration/*.js"],
+      "rules": {
+        "jest/global": false
+      }
+    }
+  ]
 }
