--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "glob": "7.1.3",
     "mocha": "7.0.1",
+    "node-ipc": "9.1.1",
     "reportportal-client": "^5.5.0"
   },
   "license": "Apache-2.0",
