--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
     {
       "files": ["example/integration/*.js"],
       "rules": {
-        "jest/global": false
+        "jest/global": 0
       }
     }
   ]
