--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "glob": "7.1.3",
+    "minimatch": "^3.0.4",
     "mocha": "7.0.1",
     "node-ipc": "9.1.1",
-    "reportportal-client": "^5.5.0"
+    "reportportal-client": "https://github.com/reportportal/client-javascript.git#master"
   },
   "license": "Apache-2.0",
   "devDependencies": {
