Update workflow files with paths-ignore

--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -17,6 +17,10 @@ on:
   push:
     branches:
       - develop
+      - '!master'
+    paths-ignore:
+      - README.md
+      - CHANGELOG.md
   pull_request:
 
 jobs:
