--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,9 +31,7 @@ jobs:
         run: npm ci
       - name: Run lint
         run: npm run lint
-      - name: Run tests
-        run: npm test
-      - name: Check coverage
+      - name: Run tests and check coverage
         run: npm run test:coverage
 
   publish-to-npm-and-gpr:
