--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "test": "jest --detectOpenHandles --config ./jest.config.js",
     "test:coverage": "jest --coverage"
   },
-  "keywords": [
-    "ReportPortal",
-    "rp",
-    "Cypress",
-    "reporting",
-    "reporter",
-    "epam"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/reportportal/agent-js-cypress"
   },
   "dependencies": {
-    "@reportportal/client-javascript": "^5.0.4",
+    "@reportportal/client-javascript": "^5.0.5",
     "glob": "7.1.3",
     "minimatch": "^3.0.4",
     "mocha": "^8.3.2",
     "node-ipc": "9.1.1"
   },
+  "directories": {
+    "lib": "./lib"
+  },
+  "files": [
+    "/lib",
+    "VERSION",
+    "/index.js"
+  ],
   "license": "Apache-2.0",
   "devDependencies": {
     "cypress": "^7.1.0",
@@ -41,5 +41,13 @@
     "jest": "^25.3.0",
     "mock-fs": "^4.11.0",
     "prettier": "1.19.1"
-  }
+  },
+  "keywords": [
+    "ReportPortal",
+    "rp",
+    "Cypress",
+    "reporting",
+    "reporter",
+    "epam"
+  ]
 }
