--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "files": [
     "/lib",
-    "VERSION",
-    "/index.js"
+    "/VERSION"
   ],
   "license": "Apache-2.0",
   "devDependencies": {
