--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "lib": "./lib"
   },
   "files": [
-    "/lib",
-    "/VERSION"
+    "/lib"
   ],
   "license": "Apache-2.0",
   "devDependencies": {
