--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@reportportal/client-javascript": "^5.0.8",
-    "glob": "7.1.3",
-    "minimatch": "^3.0.4",
-    "mocha": "^10.0.0",
+    "glob": "^7.2.3",
+    "minimatch": "^3.1.2",
+    "mocha": "^10.2.0",
     "node-ipc": "9.1.1"
   },
   "directories": {
