Add 'engines' field to the package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "files": [
     "/lib"
   ],
+  "engines": {
+    "node": ">=10.x"
+  },
   "license": "Apache-2.0",
   "devDependencies": {
     "cypress": "10.8.0",
