--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "cypress": "10.11.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "6.15.0",
+    "@types/jest": "^29.5.3",
+    "cypress": "^12.17.1",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-prettier": "3.4.1",
-    "jest": "^28.1.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.6.1",
     "mock-fs": "^4.14.0",
-    "prettier": "1.19.1"
+    "prettier": "^2.8.8"
   },
   "keywords": [
     "ReportPortal",
