EPMRPP-87604 || Use only patch versions of JS client automatically

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/reportportal/agent-js-cypress"
   },
   "dependencies": {
-    "@reportportal/client-javascript": "^5.0.14",
+    "@reportportal/client-javascript": "~5.0.15",
     "glob": "^7.2.3",
     "minimatch": "^3.1.2",
     "mocha": "^10.2.0",
