EPMRPP-87604 || Set version fragment to patch after release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,7 @@ jobs:
           else
             echo "::set-output name=releaseVersion::${{ steps.readVersion.outputs.version }}"
           fi
+
   create-tag:
     needs: calculate-version
     runs-on: ubuntu-latest
@@ -126,10 +127,12 @@ jobs:
           git checkout develop
           git merge master -Xtheirs --allow-unrelated-histories
           echo "${{ steps.bumpSnapshotVersion.outputs.next-version }}-SNAPSHOT" > ${{ env.versionFileName }}
+          echo "patch" > ${{ env.versionFragmentFileName }}
           git status
           git add ${{ env.versionFileName }}
           git commit -m "${{ needs.calculate-version.outputs.releaseVersion }} -> ${{ steps.bumpSnapshotVersion.outputs.next-version }}-SNAPSHOT"
           git push origin develop
+
   create-release:
     needs: [calculate-version, create-tag]
     runs-on: ubuntu-latest
