--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,6 +130,7 @@ jobs:
           echo "patch" > ${{ env.versionFragmentFileName }}
           git status
           git add ${{ env.versionFileName }}
+          git add ${{ env.versionFragmentFileName }}          
           git commit -m "${{ needs.calculate-version.outputs.releaseVersion }} -> ${{ steps.bumpSnapshotVersion.outputs.next-version }}-SNAPSHOT"
           git push origin develop
 
