--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -37,5 +37,5 @@ jobs:
         run: npm install
       - name: Run lint
         run: npm run lint
-      - name: Run tests and check coverage
-        run: npm run test:coverage
+#      - name: Run tests and check coverage
+#        run: npm run test:coverage
