EPMRPP-94763 || Increase test coverage

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,8 @@ jobs:
         run: npm install
       - name: Run lint
         run: npm run lint
-#      - name: Run tests and check coverage
-#        run: npm run test:coverage
+      - name: Run tests and check coverage
+        run: npm run test:coverage
 
   publish-to-npm-and-gpr:
     needs: build
