--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "ffmpeg": "^0.0.4",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jest": "^29.7.0",
     "mock-fs": "^4.14.0",
     "prettier": "^2.8.8"
