--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "glob": "^9.3.5",
     "minimatch": "^3.1.2",
     "mocha": "^10.2.0",
-    "node-ipc": "9.1.1"
+    "node-ipc": "9.1.1",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "ffmpeg": "^0.0.4",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "directories": {
     "lib": "./lib"
@@ -40,10 +44,6 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "ffmpeg": "^0.0.4",
-    "ffprobe-static": "^3.1.0",
-    "fluent-ffmpeg": "^2.1.3",
     "jest": "^29.7.0",
     "mock-fs": "^4.14.0",
     "prettier": "^2.8.8"
