Drop support of Node.js 12. Update changelog

--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -22,6 +22,9 @@ on:
       - README.md
       - CHANGELOG.md
   pull_request:
+    paths-ignore:
+      - README.md
+      - CHANGELOG.md
 
 jobs:
   test:
@@ -33,7 +36,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Install of node dependencies
+      - name: Install dependencies
         run: npm install
       - name: Run lint
         run: npm run lint
