EPMRPP-109260 || Update workflows. Add NPM OIDC support

--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -1,4 +1,4 @@
-# Copyright 2024 EPAM Systems
+# Copyright 2025 EPAM Systems
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -22,6 +22,9 @@ on:
       - README.md
       - CHANGELOG.md
   pull_request:
+    branches:
+      - develop
+      - master
     paths-ignore:
       - README.md
       - CHANGELOG.md
@@ -31,14 +34,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v5
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
-          node-version: 20
+          node-version: 24
+
       - name: Install dependencies
         run: npm install
+
       - name: Run lint
         run: npm run lint
+
       - name: Run tests and check coverage
         run: npm run test:coverage
